--- a/app/src/main/res/layout/app_menu_summary.xml
+++ b/app/src/main/res/layout/app_menu_summary.xml
@@ -17,7 +17,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_1"/>
     </android.support.v7.widget.CardView>
 
@@ -33,7 +33,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_2"/>
     </android.support.v7.widget.CardView>
 
@@ -49,7 +49,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_3"/>
     </android.support.v7.widget.CardView>
 
@@ -67,7 +67,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_4"/>
     </android.support.v7.widget.CardView>
 
@@ -85,7 +85,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_5"/>
     </android.support.v7.widget.CardView>
 
@@ -103,7 +103,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_6"/>
     </android.support.v7.widget.CardView>
 
@@ -121,7 +121,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_7"/>
     </android.support.v7.widget.CardView>
 
@@ -137,7 +137,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_8"/>
     </android.support.v7.widget.CardView>
 
@@ -155,7 +155,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_9"/>
     </android.support.v7.widget.CardView>
 
@@ -173,7 +173,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_10"/>
     </android.support.v7.widget.CardView>
 
@@ -189,7 +189,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_11"/>
     </android.support.v7.widget.CardView>
 
@@ -205,7 +205,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_12"/>
     </android.support.v7.widget.CardView>
 
@@ -221,7 +221,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_13"/>
     </android.support.v7.widget.CardView>
 
@@ -237,7 +237,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_14"/>
     </android.support.v7.widget.CardView>
 
@@ -255,7 +255,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_15"/>
     </android.support.v7.widget.CardView>
 
@@ -273,7 +273,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_16"/>
     </android.support.v7.widget.CardView>
 
@@ -291,7 +291,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_17"/>
     </android.support.v7.widget.CardView>
 
@@ -309,7 +309,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_18"/>
     </android.support.v7.widget.CardView>
 
@@ -325,7 +325,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
-            android:background="@drawable/cardview_clicked"
+            android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_19"/>
     </android.support.v7.widget.CardView>
 
