--- a/app/src/main/res/layout/app_menu_summary.xml
+++ b/app/src/main/res/layout/app_menu_summary.xml
@@ -17,6 +17,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_1"/>
     </android.support.v7.widget.CardView>
@@ -33,6 +34,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_2"/>
     </android.support.v7.widget.CardView>
@@ -49,6 +51,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_3"/>
     </android.support.v7.widget.CardView>
@@ -67,6 +70,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_4"/>
     </android.support.v7.widget.CardView>
@@ -85,6 +89,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_5"/>
     </android.support.v7.widget.CardView>
@@ -103,6 +108,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_6"/>
     </android.support.v7.widget.CardView>
@@ -121,6 +127,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_7"/>
     </android.support.v7.widget.CardView>
@@ -137,6 +144,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_8"/>
     </android.support.v7.widget.CardView>
@@ -155,6 +163,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_9"/>
     </android.support.v7.widget.CardView>
@@ -173,6 +182,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_10"/>
     </android.support.v7.widget.CardView>
@@ -189,6 +199,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_11"/>
     </android.support.v7.widget.CardView>
@@ -205,6 +216,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_12"/>
     </android.support.v7.widget.CardView>
@@ -221,6 +233,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_13"/>
     </android.support.v7.widget.CardView>
@@ -237,6 +250,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_14"/>
     </android.support.v7.widget.CardView>
@@ -255,6 +269,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_15"/>
     </android.support.v7.widget.CardView>
@@ -273,6 +288,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_16"/>
     </android.support.v7.widget.CardView>
@@ -291,6 +307,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_17"/>
     </android.support.v7.widget.CardView>
@@ -309,6 +326,7 @@
             android:paddingRight="@dimen/text_margin"
             android:paddingBottom="@dimen/text_margin"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_18"/>
     </android.support.v7.widget.CardView>
@@ -325,6 +343,7 @@
             android:padding="@dimen/text_margin"
             android:textStyle="bold"
             android:clickable="true"
+            android:textSize="@dimen/default_text_size"
             android:background="@drawable/cardview_item"
             android:text="@string/lb_sommaire_item_19"/>
     </android.support.v7.widget.CardView>
