--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -15,33 +15,13 @@
         android:layout_height="match_parent" />
 
     <!-- Navigation bar -->
-    <ScrollView
-        layout="@layout/app_menu_summary"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/menu_summary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!-- Header of the Navigation bar -->
-            <include
-                layout="@layout/nav_header_reading"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/nav_header_height" />
-
-            <!-- Content of the Navigation bar -->
-            <include
-                layout="@layout/app_menu_summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-    </ScrollView>
+        android:fitsSystemWindows="true"
+        android:scrollbars="vertical"/>
 
 </android.support.v4.widget.DrawerLayout>
