--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -17,7 +17,7 @@
     <!-- Navigation bar -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/menu_summary"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:layout_gravity="start"
