--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="subtext_margin">50dp</dimen>
+    <dimen name="subtext_padding">30dp</dimen>
     <dimen name="card_margin">5dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
@@ -11,4 +12,5 @@
     <dimen name="nav_header_height">160dp</dimen>
     <!-- Default text size -->
     <dimen name="default_text_size">19sp</dimen>
+    <dimen name="content_text_size">21sp</dimen>
 </resources>
